--- a/cdsocatalogue.ui
+++ b/cdsocatalogue.ui
@@ -192,7 +192,7 @@
     </layout>
    </item>
    <item row="5" column="0">
-    <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,2,3,2,0,1,0,1">
+    <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,2,3,2,0,1,0,0,1">
      <item>
       <widget class="QPushButton" name="pushButton_2">
        <property name="text">
@@ -254,6 +254,13 @@
       <widget class="QPushButton" name="pushButton_5">
        <property name="text">
         <string>Print...</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_6">
+       <property name="text">
+        <string>Save...</string>
        </property>
       </widget>
      </item>
