--- a/cabout.ui
+++ b/cabout.ui
@@ -20,7 +20,7 @@
       <string/>
      </property>
      <property name="pixmap">
-      <pixmap resource="resource.qrc">:/res/skytech.png</pixmap>
+      <pixmap resource="resource.qrc">:/res/skytech_about.png</pixmap>
      </property>
     </widget>
    </item>
