--- a/castcomsearch.ui
+++ b/castcomsearch.ui
@@ -15,6 +15,9 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
+    <widget class="CSearchWidget" name="widget" native="true"/>
+   </item>
+   <item>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <widget class="CNameMagView" name="treeView"/>
@@ -59,6 +62,12 @@
    <class>CNameMagView</class>
    <extends>QTreeView</extends>
    <header>cnamemagview.h</header>
+  </customwidget>
+  <customwidget>
+   <class>CSearchWidget</class>
+   <extends>QWidget</extends>
+   <header>csearchwidget.h</header>
+   <container>1</container>
   </customwidget>
  </customwidgets>
  <resources/>
