--- a/csatellitesearch.ui
+++ b/csatellitesearch.ui
@@ -17,6 +17,9 @@
    <item>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
+      <widget class="CSearchWidget" name="widget" native="true"/>
+     </item>
+     <item>
       <widget class="CSimpleList" name="listView"/>
      </item>
     </layout>
@@ -56,8 +59,14 @@
  </widget>
  <customwidgets>
   <customwidget>
+   <class>CSearchWidget</class>
+   <extends>QWidget</extends>
+   <header>csearchwidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
    <class>CSimpleList</class>
-   <extends>QListView</extends>
+   <extends>QTreeView</extends>
    <header>csimplelist.h</header>
   </customwidget>
  </customwidgets>
